# as_email_service

./: .drone.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG  CHANGELOG.md  Dockerfile  Make.rules  Makefile  README.md  docker-compose.yml  example-dotenv  package-lock.json  package.json  pyproject.toml
app/as_email/: __init__.py  account_views.py  adapters.py  admin.py  apps.py  deliver.py  forms.py  models.py  provider_tokens.py  sa_training.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
app/as_email/delivery_backends/: __init__.py  alias.py  base.py  local.py
app/as_email/management/commands/: aiosmtpd.py  as_email_report.py  as_email_sa_training.py  local_delivery_aiosmtpd.py  manage_provider_domains.py  sync_provider_aliases.py  sync_provider_domains.py
app/as_email/migrations/: 0001_initial.py  0002_alter_emailaccount_options_and_more.py  0002_alter_server_incoming_spool_dir_and_more.py  0002_emailaccount_forward_style_and_more.py  0002_remove_emailaccount_as_email_em_address_dcaef1_idx_and_more.py  0003_alter_emailaccount_deactivated.py  0003_alter_emailaccount_handle_blocked_messages_and_more.py  0003_alter_emailaccount_options.py  0003_server_incoming_spool_dir_server_mail_dir_parent_and_more.py  0004_alter_emailaccount_account_type_and_more.py  0004_alter_emailaccount_alias_for_and_more.py  0004_alter_messagefilterrule_header.py  0004_alter_messagefilterrule_unique_together.py  0004_emailaccount_imap_account_emailaccount_imap_auth_and_more.py  0005_add_provider_backend_support.py  0005_alter_blockedmessage_options_and_more.py  0005_alter_emailaccount_account_type.py  0005_rename_folder_messagefilterrule_destination_and_more.py  0006_emailaccount_spam_assassin_score_threshold_and_more.py  0006_messagefilterrule_created_at_and_more.py  0006_remove_old_provider_field.py  0006_server_api_key.py  0007_add_multiple_delivery_methods.py  0007_alter_emailaccount_delivery_method.py  0007_alter_server_incoming_spool_dir_and_more.py  0007_remove_emailaccount_as_email_em_user_id_0589fd_idx_and_more.py  0007_rename_blocked_messages_delivery_folder_emailaccount_spam_delivery_folder_and_more.py  0008_alter_emailaccount_server.py  0008_alter_server_incoming_spool_dir_and_more.py  0008_provider_smtp_server.py  0008_remove_forwarding_from_delivery_methods.py  0008_rename_spam_assassin_score_threshold_emailaccount_spam_score_threshold_and_more.py  0009_add_delivery_methods.py  0009_alias_alter_emailaccount_alias_for_and_more.py  0009_alter_server_incoming_spool_dir_and_more.py  0009_create_delivery_method_model.py  0009_remove_emailaccount_forward_style.py  0010_inactiveemail.py  0010_migrate_delivery_methods_to_model.py  0010_populate_delivery_methods.py  (+10 more)
app/as_email/providers/: __init__.py  base.py  forwardemail.py  postmark.py
app/as_email/reports/: __init__.py  email_usage.py  unused_servers.py
app/as_email/tests/: conftest.py  factories.py  test_admin.py  test_aiosmtpd.py  test_auth.py  test_deliver.py  test_delivery_methods.py  test_email_change.py  test_factories.py  test_manage_provider_domains_command.py  test_migrations.py  test_models.py  test_reports.py  test_sa_training.py  test_signals.py  test_sync_provider_domains_command.py  test_tasks.py  test_utils.py  test_views.py
app/as_email_service/: asgi.py  settings.py  urls.py
app/config/: asgi.py  finders.py  settings.py  storage.py  urls.py  wsgi.py
app/project/templatetags/: project_tags.py
app/project/tests/: test_project_tags.py
app/scripts/: check_spam.py  extract_forwarded_spam.py  generate_api_docs.py  import_maildelivery.py  start_app.sh  start_local_delivery_smtpd.sh  start_smtpd.sh  start_worker.sh  test_msg_decode.py
app/static/css/: base.css  bulma-tagsinput.min.css
app/static/js/: base.js  bulma-tagsinput.js  password_strength.js  vue.esm-browser.js  zxcvbn.js
app/templates/: base.html  home.html
app/templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup_closed.html
app/templates/as_email/: account_info.html  email_change_revoke.html
app/templates/registration/: base.html  logged_out.html  login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  user_invitation.html
app/tests/: conftest.py
app/tests/as_email/: factories.py  test_admin.py  test_aiosmtpd.py  test_auth.py  test_autoconfig.py  test_deliver.py  test_delivery_methods.py  test_email_change.py  test_factories.py  test_manage_provider_domains_command.py  test_migrations.py  test_models.py  test_reports.py  test_sa_training.py  test_signals.py  test_sync_provider_domains_command.py  test_tasks.py  test_utils.py  test_views.py
app/tests/users/: test_email_change_security.py  test_invitation_views.py  test_invitations.py  test_tasks.py  test_validators.py
app/users/: admin.py  apps.py  invitation.py  invitation_views.py  models.py  signals.py  tasks.py  urls.py  validators.py
app/users/migrations/: 0001_initial.py  0002_userinvitation.py  0003_alter_userinvitation_invitee_user.py  0004_alter_userinvitation_status_reset_sent.py
app/users/tests/: test_tasks.py
as_email_service/: manage.py
as_email_service/as_email/: models.py  views.py
as_email_service/as_email_service/: settings.py  wsgi.py
config/redis/: redis.conf
docs/: api.md  autoconfig-autodiscover.md  delivery-methods.md  email-change.md  fail2ban-integration.md  openapi.yaml  sa-training.md
docs/fail2ban/filter.d/: as-email-conn.conf  as-email-dnsbl.conf  as-email-flood.conf  as-email-nouser.conf  as-email-passwd.conf  as-email-protected.conf
docs/fail2ban/jail.d/: as-email.conf
docs/rfcs/: rfc3463.txt  rfc3464.txt  rfc5228.txt  rfc5804.txt
requirements/: Makefile  development.in  development.txt  lint.in  lint.txt  production.in  production.txt
scripts/: email_usage_report.py  gen_self_signed_testing_certs.py  sa-train.sh
(+40 files in other folders)
