[project]
name = "as-email-service"
version = "0.7.1"
description = "Apricot Systematic Email Service"
requires-python = ">=3.13.12"
dependencies = [
    "aiofiles",
    "aiologger",
    "aiosmtpd",
    "aiospamc",
    "crispy-bulma",
    "cryptography==42.0.8",
    "csscompressor",
    "django",
    "django-anymail",
    "django-compressor",
    "django-crispy-forms",
    "django-dry-rest-permissions",
    "django-fernet-encrypted-fields>=0.1.3",
    "django-environ",
    "django-extensions",
    "django-filter",
    "django-guardian",
    "django-model-utils>=5.0.0",
    "django-ordered-model",
    "django-polymorphic",
    "django-passkeys",
    "django-settings-export",
    "django-simple-bulma==2.6.0",
    "djangorestframework",
    "dnspython",
    "docopt",
    "drf-nested-routers",
    "gunicorn",
    "httpx",
    "huey",
    "imapclient>=3.1.0",
    "influxdb-client",
    "postmarker",
    "proxy-protocol",
    "pyOpenSSL",
    "pydantic",
    "pydnsbl",
    "python-dotenv",
    "pytz",
    "pyyaml",
    "redis[hiredis]",
    "rich",
    "sentry-sdk[django]",
    "uvicorn",
    "wait-for-it",
    "whitenoise",
    "drf-spectacular>=0.29.0",
]

[dependency-groups]
dev = [
    # Testing
    "coverage",
    "dirty-equals",
    "fakeredis",
    "ipython",
    "pytest",
    "pytest-asyncio",
    "pytest-coverage",
    "pytest-django",
    "pytest-factoryboy",
    "pytest-faker",
    "pytest-mock",
    "pytest-sugar",
    "pytest-timeout",
    "pytest-xdist",
    "requests-mock",
    "trustme",
    "werkzeug",
    # Linting and formatting
    "django-stubs[compatible-mypy]",
    "mypy",
    "pre-commit",
    "ruff",
    "types-aiofiles",
    "types-cachetools",
    "types-pytz",
    "types-redis",
    "types-requests",
    "types-setuptools",
    "django-test-migrations>=1.5.0",
    "python-lsp-server>=1.13.1",
    "python-lsp-ruff>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pylsp-mypy]
enabled = true
live_mode = true

[tool.ruff]
target-version = "py313"
line-length = 80
exclude = [
    'migrations/.+\.py$',
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "I",   # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip() without explicit strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["as_email"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
mypy_path = "./app"
exclude = [
    '__pycache__',
    '^\.mnt',
    '.*[-_]cache',
    '\.git',
    '\.venv',
    'venv*',
    'tmp',
    'fixtures',
    'deployment',
    'docs',
    'requirements',
    'migrations'
]
plugins = ["mypy_django_plugin.main"]
strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "smoke: marks tests as smoke (deselect with '-m \"not smoke\"')",
    "integration",
]
# Show slowest 10 tests
addopts = "--durations=10 --durations-min=0.1"
